Bug 399637 - libksysguard fails to build without QtWebEngine
Summary: libksysguard fails to build without QtWebEngine
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: libksysguard (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Development Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-11 01:48 UTC by Christoph Feck
Modified: 2018-10-11 06:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2018-10-11 01:48:32 UTC
STEPS TO REPRODUCE
compile libksysguard without installed QtWebEngine devel headers

OBSERVED RESULT
processui/scripting.cpp:58:27: error: 'QWebEngineUrlRequestInfo' has not been declared

Full log: https://build.opensuse.org/package/live_build_log/home:cfeck:branches:KDE:Unstable:Frameworks/libksysguard5/openSUSE_Factory/x86_64
Comment 1 Rik Mills 2018-10-11 05:40:36 UTC
For the record, seeing the same failure on Neon and Kubuntu CI builds of master branch.
Comment 2 Kai Uwe Broulik 2018-10-11 06:08:04 UTC
Git commit 956c9f29b9b9f036f9b81656f06c29fb1f748852 by Kai Uwe Broulik.
Committed on 11/10/2018 at 06:07.
Pushed by broulik into branch 'master'.

Add ifdef for webengine

Fixes build

M  +2    -0    processui/scripting.cpp

https://commits.kde.org/libksysguard/956c9f29b9b9f036f9b81656f06c29fb1f748852