Add ifdef for webengine

Fixes build

BUG: 399637